# fractals

./: .gitignore  Cargo.toml
client/: package-lock.json  package.json
client/src/: action-on-drag.ts  main.ts  mandelbrot-canvas.ts  pixi-app.ts  shader.ts
server/src/: main.rs  mandelbrot.rs
src/: main.rs  mandelbrot.rs
